--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,7 @@ var html2 = [{
 }];
 $( '#my-div-two' ).json2HTML( html2 );
 
+var me = 'test';
 // sample #3
 var html3 = [{
 	node: "p",
@@ -54,6 +55,17 @@ var html3 = [{
 	click: function( el ) {
 		console.log( 'prop1 = ' + $( this ).data( 'prop1' ) );
 		console.log( 'prop2 = ' + $( this ).data( 'prop2' ) );
+	},
+	fn : {
+		params : {
+			x: 1,
+			y: 'foo',
+			z: jQuery
+		},
+		callback : function(x, y, z) {
+			console.log( this );
+			console.log( x, y, z );
+		}
 	}
 }];
 $( '#my-div-three' ).json2HTML( html3 );
